深度遍历提取文本节点&添加window.onload&重写获取选中区域节点数组

--- a/manifest.json
+++ b/manifest.json
@@ -35,7 +35,7 @@
 	[
 		{
 			"matches": ["http://*/*", "https://*/*"],
-			"js": ["js/get-lineation-array.js", "js/content-script.js"],
+			"js": ["js/get-node.js", "js/get-lineation-array.js", "js/content-script.js"],
 			"css": ["css/custom.css"],
             "run_at": "document_end"
 		}
